@@ -38,7 +38,7 @@ missing, except for the pre-R600 KMS case.
  /*
   * KMS wrapper.
   * - 2.0.0 - initial interface
-@@ -320,6 +323,37 @@ static struct drm_driver driver_old = {
+@@ -341,6 +344,42 @@ static struct drm_driver driver_old = {
  
  static struct drm_driver kms_driver;
  
@@ -49,6 +49,10 @@ missing, except for the pre-R600 KMS case.
 + */
 +static bool radeon_firmware_installed(void)
 +{
++#if IS_BUILTIN(CONFIG_DRM_RADEON)
++	/* It may be too early to tell.  Assume it's there. */
++	return true;
++#else
 +	struct path path;
 +
 +	if (kern_path("/lib/firmware/radeon", LOOKUP_DIRECTORY | LOOKUP_FOLLOW,
@@ -58,6 +62,7 @@ missing, except for the pre-R600 KMS case.
 +	}
 +
 +	return false;
++#endif
 +}
 +
 +#ifdef CONFIG_DRM_RADEON_UMS
@@ -76,7 +81,7 @@ missing, except for the pre-R600 KMS case.
  static int radeon_kick_out_firmware_fb(struct pci_dev *pdev)
  {
  	struct apertures_struct *ap;
-@@ -346,6 +380,12 @@ static int radeon_pci_probe(struct pci_d
+@@ -367,6 +406,12 @@ static int radeon_pci_probe(struct pci_d
  {
  	int ret;
  
@@ -89,7 +94,7 @@ missing, except for the pre-R600 KMS case.
  	/* Get rid of things like offb */
  	ret = radeon_kick_out_firmware_fb(pdev);
  	if (ret)
-@@ -577,6 +617,7 @@ static struct pci_driver *pdriver;
+@@ -586,6 +631,7 @@ static struct pci_driver *pdriver;
  static struct pci_driver radeon_pci_driver = {
  	.name = DRIVER_NAME,
  	.id_table = pciidlist,
