@@ -9,6 +9,8 @@ linux (3.16.3-3) UNRELEASED; urgency=low
     FB_SIS, FB_3DFX, FB_VOODOO1 back to modules (Closes: #748398)
   * udeb: Add pata_rdc to pata-modules (Closes: #633128)
   * [s390*] 3215: fix tty output containing tabs (Closes: #758264)
+  * radeon: Don't check for installed firmware if driver is built-in
+    (Closes: #763305)
 
  -- Ian Campbell <ijc@debian.org>  Sun, 21 Sep 2014 12:09:24 +0100
 
